add ops file to bump bosh workers
- parallel nodes should be <= workers - 2
[#150644882]

Signed-off-by: Dave McClure <dmcclure@pivotal.io>

--- a/pipelines/consul.yml
+++ b/pipelines/consul.yml
@@ -362,8 +362,9 @@ jobs:
       BBL_LB_KEY: {{consul_cf_deployment_lb_key}}
       GIT_COMMIT_EMAIL: cf-infrastructure@pivotal.io
       GIT_COMMIT_USERNAME: CI Infra Bot
+      OPS_FILES: operations/set_bosh_workers.yml
     input_mapping:
-      ops-files: bbl-state
+      ops-files: ci
     on_success:
       put: infrastructure-ci-bbl-states
       params:
@@ -402,7 +403,7 @@ jobs:
     file: ci/scripts/consul/run-consats/task.yml
     params:
       BBL_STATE_DIR: consats-linux
-      PARALLEL_NODES: 5
+      PARALLEL_NODES: 8
       ENABLE_TURBULENCE_TESTS: false
     ensure:
       task: delete-consats-linux-deployments
