--- a/pipelines/bosh-bootloader.yml
+++ b/pipelines/bosh-bootloader.yml
@@ -9,8 +9,6 @@ groups:
   - bbl-downstream-docker-image
   - bbl-aws-cf
   - bbl-gcp-cf
-  - bbl-gcp-cf-jumpbox
-  - bbl-aws-cf-jumpbox
   - major
   - minor
   - patch
@@ -28,8 +26,6 @@ groups:
   - bbl-downstream-docker-image
   - bbl-aws-cf
   - bbl-gcp-cf
-  - bbl-gcp-cf-jumpbox
-  - bbl-aws-cf-jumpbox
 
 - name: smoke-tests
   jobs:
@@ -201,7 +197,7 @@ jobs:
     - get: ci
       resource: infrastructure-ci
   - aggregate:
-    - task: bbl-up-credhub
+    - task: upgrade-skip-for-now
       file: ci/scripts/bosh-bootloader/acceptance/task.yml
       params:
         BBL_IAAS: aws
@@ -210,7 +206,7 @@ jobs:
         BBL_AWS_REGION: {{aws_region}}
         BBL_TEST_ENV_ID_PREFIX: bbl-ci
         BBL_TEST_PACKAGES: bbl
-        RUN_TEST: bbl-up-credhub
+        RUN_TEST: upgrade-skip-for-now
     - task: latest-error
       file: ci/scripts/bosh-bootloader/acceptance/task.yml
       params:
@@ -424,6 +420,7 @@ jobs:
 
 - name: bbl-aws-cf
   serial: true
+  build_logs_to_retain: 100
   plan:
   - aggregate:
     - get: bosh-bootloader
@@ -466,6 +463,8 @@ jobs:
       image: cf-deployment-concourse-tasks-bbl-dev-docker-image
       params:
         BBL_STATE_DIR: bbl-aws-cf
+        BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
+        BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
       input_mapping:
         bbl-state: updated-bbl-state
       on_failure:
@@ -479,6 +478,8 @@ jobs:
       bbl-state: updated-bbl-state
     params:
       BBL_STATE_DIR: bbl-aws-cf
+      BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
+      BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
       INFRASTRUCTURE: aws
     on_failure:
       task: upload-stemcell-destroy-infrastructure
@@ -488,6 +489,8 @@ jobs:
         bbl-state: updated-bbl-state
       params:
         BBL_STATE_DIR: bbl-aws-cf
+        BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
+        BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
       on_failure:
         put: infrastructure-ci-bbl-states
         params:
@@ -499,6 +502,8 @@ jobs:
       bbl-state: updated-bbl-state
     params:
       BBL_STATE_DIR: bbl-aws-cf
+      BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
+      BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
       SYSTEM_DOMAIN: bbl-aws-cf.infrastructure.cf-app.com
       VARS_STORE_FILE: bbl-aws-cf/deployment-vars.yml
       OPS_FILES: "operations/aws.yml operations/use-compiled-releases.yml"
@@ -511,275 +516,27 @@ jobs:
           bbl-state: updated-bbl-state
         params:
           BBL_STATE_DIR: bbl-aws-cf
+          BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
+          BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
       - task: bosh-cleanup
         file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
+        image: cf-deployment-concourse-tasks-bbl-dev-docker-image
+        input_mapping:
+          bbl-state: updated-bbl-state
+        params:
+          CLEAN_ALL: true
+          BBL_STATE_DIR: bbl-aws-cf
+          BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
+          BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
+      - task: destroy-infrastructure
+        file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
         image: cf-deployment-concourse-tasks-bbl-dev-docker-image
         input_mapping:
           bbl-state: updated-bbl-state
         params:
           BBL_STATE_DIR: bbl-aws-cf
-      - task: destroy-infrastructure
-        file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
-        image: cf-deployment-concourse-tasks-bbl-dev-docker-image
-        input_mapping:
-          bbl-state: updated-bbl-state
-        params:
-          BBL_STATE_DIR: bbl-aws-cf
-        on_failure:
-          put: infrastructure-ci-bbl-states
-          params:
-            repository: updated-bbl-state
-
-- name: bbl-aws-cf-jumpbox
-  serial: true
-  build_logs_to_retain: 100
-  plan:
-  - aggregate:
-    - get: bosh-bootloader
-      passed: [passed-acceptance-tests]
-      trigger: true
-    - get: cf-deployment-concourse-tasks
-    - get: infrastructure-ci-bbl-states
-    - get: cf-deployment-concourse-tasks-bbl-dev-docker-image
-      passed: [bbl-downstream-docker-image]
-    - get: ci
-      resource: infrastructure-ci
-    - get: cf-deployment
-    - get: ops-files
-      resource: cf-deployment
-    - get: vars-files
-      resource: infrastructure-ci-bbl-states
-    - get: vars-store
-      resource: infrastructure-ci-bbl-states
-  - task: bbl-up
-    file: cf-deployment-concourse-tasks/bbl-up/task.yml
-    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
-    params:
-      BBL_IAAS: aws
-      BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
-      BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
-      BBL_AWS_REGION: us-west-2
-      BBL_STATE_DIR: bbl-aws-cf-jumpbox
-      BBL_ENV_NAME: bbl-aws-cf-jumpbox
-      LB_DOMAIN: bbl-aws-cf-jumpbox.infrastructure.cf-app.com
-      BBL_LB_CERT: {{bbl_aws_cf_lb_cert}}
-      BBL_LB_KEY: {{bbl_aws_cf_lb_key}}
-      GIT_COMMIT_EMAIL: cf-infrastructure@pivotal.io
-      GIT_COMMIT_USERNAME: CI Infra Bot
-      BBL_EXTRA_FLAGS: --credhub
-    input_mapping:
-      bbl-state: infrastructure-ci-bbl-states
-      ops-files: infrastructure-ci-bbl-states
-    on_failure:
-      task: bbl-up-destroy-infrastructure
-      file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
-      image: cf-deployment-concourse-tasks-bbl-dev-docker-image
-      params:
-        BBL_STATE_DIR: bbl-aws-cf-jumpbox
-        BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
-        BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
-      input_mapping:
-        bbl-state: updated-bbl-state
-      on_failure:
-        put: infrastructure-ci-bbl-states
-        params:
-          repository: updated-bbl-state
-  - task: upload-stemcell
-    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
-    file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
-    input_mapping:
-      bbl-state: updated-bbl-state
-    params:
-      BBL_STATE_DIR: bbl-aws-cf-jumpbox
-      BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
-      BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
-      INFRASTRUCTURE: aws
-    on_failure:
-      task: upload-stemcell-destroy-infrastructure
-      file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
-      image: cf-deployment-concourse-tasks-bbl-dev-docker-image
-      input_mapping:
-        bbl-state: updated-bbl-state
-      params:
-        BBL_STATE_DIR: bbl-aws-cf-jumpbox
-        BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
-        BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
-      on_failure:
-        put: infrastructure-ci-bbl-states
-        params:
-          repository: updated-bbl-state
-  - task: deploy-cf
-    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
-    file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
-    input_mapping:
-      bbl-state: updated-bbl-state
-    params:
-      BBL_STATE_DIR: bbl-aws-cf-jumpbox
-      BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
-      BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
-      SYSTEM_DOMAIN: bbl-aws-cf-jumpbox.bbl-test.ci.cf-app.com
-      VARS_STORE_FILE: bbl-aws-cf-jumpbox/deployment-vars.yml
-      OPS_FILES: "operations/aws.yml operations/use-compiled-releases.yml"
-      MANIFEST_FILE: cf-deployment.yml
-      REGENERATE_VARS_STORE: false
-      FAIL_ON_DOWNTIME: false
-      DEPLOY_WITH_UPTIME_MEASUREMENTS: false
-    ensure:
-      do:
-      - task: delete-cf-deployment
-        image: cf-deployment-concourse-tasks-bbl-dev-docker-image
-        file: cf-deployment-concourse-tasks/bosh-delete-deployment/task.yml
-        input_mapping:
-          bbl-state: updated-bbl-state
-        params:
-          BBL_STATE_DIR: bbl-aws-cf-jumpbox
           BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
           BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
-          DEPLOYMENT_NAME: cf
-      - task: bosh-cleanup
-        image: cf-deployment-concourse-tasks-bbl-dev-docker-image
-        file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
-        input_mapping:
-          bbl-state: updated-bbl-state
-        params:
-          CLEAN_ALL: true
-          BBL_STATE_DIR: bbl-aws-cf-jumpbox
-          BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
-          BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
-      - task: destroy-infrastructure
-        file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
-        image: cf-deployment-concourse-tasks-bbl-dev-docker-image
-        input_mapping:
-          bbl-state: updated-bbl-state
-        params:
-          BBL_STATE_DIR: bbl-aws-cf-jumpbox
-          BBL_AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
-          BBL_AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
-        on_failure:
-          put: infrastructure-ci-bbl-states
-          params:
-            repository: updated-bbl-state
-
-- name: bbl-gcp-cf-jumpbox
-  serial: true
-  build_logs_to_retain: 100
-  plan:
-  - aggregate:
-    - get: bosh-bootloader
-      passed: [passed-acceptance-tests]
-      trigger: true
-    - get: cf-deployment-concourse-tasks
-    - get: infrastructure-ci-bbl-states
-    - get: cf-deployment-concourse-tasks-bbl-dev-docker-image
-      passed: [bbl-downstream-docker-image]
-    - get: ci
-      resource: infrastructure-ci
-    - get: cf-deployment
-    - get: ops-files
-      resource: cf-deployment
-    - get: vars-files
-      resource: infrastructure-ci-bbl-states
-    - get: vars-store
-      resource: infrastructure-ci-bbl-states
-  - task: bbl-up
-    file: cf-deployment-concourse-tasks/bbl-up/task.yml
-    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
-    params:
-      BBL_IAAS: gcp
-      BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-      BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
-      BBL_GCP_REGION: {{bbl_gcp_region}}
-      BBL_GCP_ZONE: {{bbl_gcp_zone}}
-      BBL_LB_CERT: {{bbl_downstream_cf_ssl_cert}}
-      BBL_LB_KEY: {{bbl_downstream_cf_ssl_cert_private_key}}
-      LB_DOMAIN: bbl-jumpbox.bbl-test.ci.cf-app.com
-      BBL_ENV_NAME: bbl-jumpbox
-      BBL_STATE_DIR: bbl-gcp-cf-jumpbox
-      BBL_EXTRA_FLAGS: --credhub
-    input_mapping:
-      bbl-state: infrastructure-ci-bbl-states
-      ops-files: infrastructure-ci-bbl-states
-    on_failure:
-      task: bbl-up-destroy-infrastructure
-      file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
-      image: cf-deployment-concourse-tasks-bbl-dev-docker-image
-      params:
-        BBL_STATE_DIR: bbl-gcp-cf-jumpbox
-        BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-        BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
-      input_mapping:
-        bbl-state: updated-bbl-state
-      on_failure:
-        put: infrastructure-ci-bbl-states
-        params:
-          repository: updated-bbl-state
-  - task: upload-stemcell
-    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
-    file: cf-deployment-concourse-tasks/bosh-upload-stemcell-from-cf-deployment/task.yml
-    input_mapping:
-      bbl-state: updated-bbl-state
-    params:
-      BBL_STATE_DIR: bbl-gcp-cf-jumpbox
-      BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-      BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
-      INFRASTRUCTURE: google
-    on_failure:
-      task: upload-stemcell-destroy-infrastructure
-      file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
-      image: cf-deployment-concourse-tasks-bbl-dev-docker-image
-      input_mapping:
-        bbl-state: updated-bbl-state
-      params:
-        BBL_STATE_DIR: bbl-gcp-cf-jumpbox
-        BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-        BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
-      on_failure:
-        put: infrastructure-ci-bbl-states
-        params:
-          repository: updated-bbl-state
-  - task: deploy-cf
-    image: cf-deployment-concourse-tasks-bbl-dev-docker-image
-    file: cf-deployment-concourse-tasks/bosh-deploy/task.yml
-    input_mapping:
-      bbl-state: updated-bbl-state
-    params:
-      BBL_STATE_DIR: bbl-gcp-cf-jumpbox
-      BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-      BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
-      SYSTEM_DOMAIN: bbl-jumpbox.bbl-test.ci.cf-app.com
-      VARS_STORE_FILE: bbl-gcp-cf-jumpbox/deployment-vars.yml
-      OPS_FILES: operations/use-compiled-releases.yml
-    ensure:
-      do:
-      - task: delete-cf-deployment
-        image: cf-deployment-concourse-tasks-bbl-dev-docker-image
-        file: cf-deployment-concourse-tasks/bosh-delete-deployment/task.yml
-        input_mapping:
-          bbl-state: updated-bbl-state
-        params:
-          BBL_STATE_DIR: bbl-gcp-cf-jumpbox
-          BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-          BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
-          DEPLOYMENT_NAME: cf
-      - task: bosh-cleanup
-        image: cf-deployment-concourse-tasks-bbl-dev-docker-image
-        file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
-        input_mapping:
-          bbl-state: updated-bbl-state
-        params:
-          CLEAN_ALL: true
-          BBL_STATE_DIR: bbl-gcp-cf-jumpbox
-          BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-          BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
-      - task: destroy-infrastructure
-        file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
-        image: cf-deployment-concourse-tasks-bbl-dev-docker-image
-        input_mapping:
-          bbl-state: updated-bbl-state
-        params:
-          BBL_STATE_DIR: bbl-gcp-cf-jumpbox
-          BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
-          BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
         on_failure:
           put: infrastructure-ci-bbl-states
           params:
@@ -831,6 +588,8 @@ jobs:
       image: cf-deployment-concourse-tasks-bbl-dev-docker-image
       params:
         BBL_STATE_DIR: bbl-gcp-cf
+        BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
+        BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
       input_mapping:
         bbl-state: updated-bbl-state
       on_failure:
@@ -844,6 +603,8 @@ jobs:
       bbl-state: updated-bbl-state
     params:
       BBL_STATE_DIR: bbl-gcp-cf
+      BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
+      BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
       INFRASTRUCTURE: google
     on_failure:
       task: upload-stemcell-destroy-infrastructure
@@ -853,6 +614,8 @@ jobs:
         bbl-state: updated-bbl-state
       params:
         BBL_STATE_DIR: bbl-gcp-cf
+        BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
+        BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
       on_failure:
         put: infrastructure-ci-bbl-states
         params:
@@ -864,6 +627,8 @@ jobs:
       bbl-state: updated-bbl-state
     params:
       BBL_STATE_DIR: bbl-gcp-cf
+      BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
+      BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
       SYSTEM_DOMAIN: bbl-downstream.bbl-test.ci.cf-app.com
       VARS_STORE_FILE: bbl-gcp-cf/deployment-vars.yml
       OPS_FILES: operations/use-compiled-releases.yml
@@ -876,13 +641,18 @@ jobs:
           bbl-state: updated-bbl-state
         params:
           BBL_STATE_DIR: bbl-gcp-cf
+          BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
+          BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
       - task: bosh-cleanup
         file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
         image: cf-deployment-concourse-tasks-bbl-dev-docker-image
         input_mapping:
           bbl-state: updated-bbl-state
         params:
+          CLEAN_ALL: true
           BBL_STATE_DIR: bbl-gcp-cf
+          BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
+          BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
       - task: destroy-infrastructure
         file: cf-deployment-concourse-tasks/bbl-destroy/task.yml
         image: cf-deployment-concourse-tasks-bbl-dev-docker-image
@@ -890,6 +660,8 @@ jobs:
           bbl-state: updated-bbl-state
         params:
           BBL_STATE_DIR: bbl-gcp-cf
+          BBL_GCP_SERVICE_ACCOUNT_KEY: {{bbl_gcp_service_account_key}}
+          BBL_GCP_PROJECT_ID: {{bbl_gcp_project_id}}
         on_failure:
           put: infrastructure-ci-bbl-states
           params:
@@ -902,9 +674,7 @@ jobs:
       trigger: true
       passed:
       - bbl-aws-cf
-      - bbl-aws-cf-jumpbox
       - bbl-gcp-cf
-      - bbl-gcp-cf-jumpbox
 
 - name: github-release
   plan:
