Add Azure acceptance tests
[#151408955]

--- a/scripts/bosh-bootloader/acceptance/task.yml
+++ b/scripts/bosh-bootloader/acceptance/task.yml
@@ -18,6 +18,15 @@ params:
   BBL_AWS_REGION:
   BBL_AWS_ACCESS_KEY_ID:
   BBL_AWS_SECRET_ACCESS_KEY:
+  BBL_AZURE_SUBSCRIPTION_ID:
+  BBL_AZURE_TENANT_ID:
+  BBL_AZURE_CLIENT_ID:
+  BBL_AZURE_CLIENT_SECRET:
+  BBL_AZURE_LOCATION:
+  BBL_GCP_SERVICE_ACCOUNT_KEY:
+  BBL_GCP_PROJECT_ID:
+  BBL_GCP_REGION:
+  BBL_GCP_ZONE:
   BBL_TEST_ENV_ID_PREFIX:
   BBL_TEST_PACKAGES:
   RUN_TEST:
