Initial terraforming-aws smoke test
[#151621872]

Signed-off-by: Rowan Jacobs <rojacobs@pivotal.io>

--- a/pipelines/terraforming.yml
+++ b/pipelines/terraforming.yml
@@ -15,3 +15,5 @@ jobs:
   plan:
   - get: terraforming-aws
     trigger: true
+  - task: check-syntax
+    file: ci/scripts/terraforming-aws/check-syntax/task.yml
