--- a/pipelines/terraforming.yml
+++ b/pipelines/terraforming.yml
@@ -25,3 +25,6 @@ jobs:
     resource: infrastructure-ci
   - task: check-syntax
     file: ci/scripts/terraforming-aws/check-syntax/task.yml
+    params:
+      AWS_ACCESS_KEY_ID: {{aws_access_key_id}}
+      AWS_SECRET_ACCESS_KEY: {{aws_secret_access_key}}
