Add sample-manifest job as dependency for create-final-release in consul.
Signed-off-by: Dave McClure <dmcclure@pivotal.io>

--- a/pipelines/consul.yml
+++ b/pipelines/consul.yml
@@ -893,6 +893,7 @@ jobs:
       - consats-linux
       - consats-windows
       - cats
+      - deploy-sample-manifest
       trigger: true
     - get: release-repo-master
       resource: consul-release-master
