--- a/pipelines/terraforming.yml
+++ b/pipelines/terraforming.yml
@@ -45,4 +45,7 @@ jobs:
   - task: check-syntax
     file: ci/scripts/terraforming/check-gcp-syntax/task.yml
     params:
+      GCP_PROJECT_ID: {{gcp_project_id}}
       GCP_SERVICE_ACCOUNT_KEY: {{gcp_service_account_key}}
+      GCP_SSL_CERT: {{bbl_downstream_cf_ssl_cert}}
+      GCP_SSL_PRIVATE_KEY: {{bbl_downstream_cf_ssl_cert_private_key}}
