Teardown environments at the end of consats.

--- a/pipelines/consul.yml
+++ b/pipelines/consul.yml
@@ -15,8 +15,6 @@ groups:
   - deploy-sample-manifest
   - create-final-release
   - merge-master-into-develop
-- name: turbulence
-  jobs:
   - setup-consats-linux-turbulence
   - consats-linux-turbulence
   - teardown-consats-linux-turbulence
@@ -268,6 +266,8 @@ jobs:
       resource: infrastructure-ci
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
+      passed: [consats-linux-turbulence]
+      trigger: true
     - get: cf-deployment-concourse-tasks
   - task: cleanup-consats-linux-deployment
     file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
@@ -381,6 +381,8 @@ jobs:
       resource: infrastructure-ci
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
+      passed: [consats-linux]
+      trigger: true
     - get: cf-deployment-concourse-tasks
   - task: cleanup-consats-linux-deployment
     file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
@@ -516,6 +518,8 @@ jobs:
       resource: infrastructure-ci
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
+      passed: [consats-windows]
+      trigger: true
     - get: cf-deployment-concourse-tasks
   - task: cleanup-consats-windows-deployment
     file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
@@ -626,6 +630,8 @@ jobs:
       resource: infrastructure-ci
     - get: bbl-state
       resource: infrastructure-ci-bbl-states
+      passed: [consats-windows-turbulence]
+      trigger: true
     - get: cf-deployment-concourse-tasks
   - task: cleanup-consats-windows-deployment
     file: cf-deployment-concourse-tasks/bosh-cleanup/task.yml
