Move turbulence jobs back out.
Signed-off-by: Dave McClure <dmcclure@pivotal.io>

--- a/pipelines/consul.yml
+++ b/pipelines/consul.yml
@@ -15,6 +15,8 @@ groups:
   - deploy-sample-manifest
   - create-final-release
   - merge-master-into-develop
+- name: turbulence
+  jobs:
   - setup-consats-linux-turbulence
   - consats-linux-turbulence
   - teardown-consats-linux-turbulence
